--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "crypto-app",
   "version": "1.0.0",
   "description": "basic app to demonstrate electron js",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "10.1.2"
+  }
 }
